package ProtoBuffer;
 
option optimize_for = SPEED;

message PathPlanningRequest {
  required bool UseDistributionMap = 1;
  required bool UseTaskDifficultyMap = 2;
  required bool UseHiararchy = 3;
  required bool UseCoarseToFineSearch = 4;
  required bool UseParallelProcessing = 5;
  required UAVType VehicleType = 6;
  required DType DetectionType = 7;
  required double DetectionRate = 8;
  // required RtwMatrix DistMap = 9;
  // required RtwMatrix DiffMap = 10;
  required bool UseEndPoint = 11;
  required int32 T = 12;
  required DistPoint pStart = 13;
  required DistPoint pEnd = 14;
  required AlgType AlgToUse = 15;
  required bool BatchRun = 16;
  required int32 RunTimes = 17;
  required int32 MaxDifficulty = 18;
  repeated double DiffRate = 19;
  required bool DrawPath = 20;
  required int32 d = 21;
  required int32 TopNCount = 22;

  enum UAVType {
    FixWing = 0;
    Copter = 1;
  }

  enum DType {
    FixAmount = 0;
    FixAmountInPercentage = 1;
    FixPercentage = 2;
  }

  enum AlgType {
    CC = 0;
    CC_E = 1;
    LHCGWCONV = 2;
    LHCGWCONV_E = 3;
    LHCGWPF = 4;
    LHCGWPF_E = 5;
    LHCRandom = 6;
    LHCRandom_E = 7;
    Random = 8;
    Random_E = 9;
    CONV = 10;
    CONV_E = 11;
    PF = 12;
    PF_E = 13;
    TopTwo = 14;
    TopTwo_E = 15;
    TopN = 16;
    TopN_E = 17;
    EA = 18;
    EA_E = 19;
  }
  
  message DistPoint {
    required int32 row = 1;
    required int32 column = 2;
  }
}

message SimpleItem {
  required string CallerIP = 1;
  required PathPlanningRequest curRequest = 2;
}